--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,15 @@
   width: 100px;
   height: 150px;
   margin-right: 5px;
-  margin-top: 5px;
+  margin-top: 15px;
   padding: 0;
+}
+
+.card:hover {
+  margin-top: 5px;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 .card-img {
