Create player models so user can be in more than one game

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 
     <% @games.each do |game| %>
-      <p><%= link_to "#{game.player1.email}'s game", game_path(game) %></p>
+      <p><%= link_to "Randomly generated name here", game_path(game) %></p>
     <% end %>
   </div>
 </div>
