--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="columns small-12 card <%= @played.color %>">
+  <div class="columns small-12 card <%= @played.color %> played">
     <%= image_tag("cards/#{@played.value}.png", class: "card-img") %>
   </div>
 </div>
