--- a/app/views/games/colors.html.erb
+++ b/app/views/games/colors.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <% ["red", "green", "yellow", "blue"].each do |color| %>
+  <% Card.colors.each do |color| %>
     <div class="columns small-1">
       <%= button_to "", choose_color_path(@game, color), class: "card #{color}", method: :post %>
     </div>
